--- a/BoincGui/resources.qrc
+++ b/BoincGui/resources.qrc
@@ -3,6 +3,7 @@
   <file alias="connect_creating.png">icons/connect_creating.png</file>
   <file alias="connect_established.png">icons/connect_established.png</file>
   <file alias="connect_no.png">icons/connect_no.png</file>
+  <file alias="cpu.png">icons/cpu.png</file>
   <file alias="ok.png">icons/ok.png</file>
   <file alias="status_unknown.png">icons/status_unknown.png</file>
   <file alias="stop.png">icons/stop.png</file>
