--- a/BoincGui/resources.qrc
+++ b/BoincGui/resources.qrc
@@ -5,8 +5,11 @@
   <file alias="connect_no.png">icons/connect_no.png</file>
   <file alias="cpu.png">icons/cpu.png</file>
   <file alias="ok.png">icons/ok.png</file>
+  <file alias="projects.png">icons/projects.png</file>
+  <file alias="stats.png">icons/stats.png</file>
   <file alias="status_unknown.png">icons/status_unknown.png</file>
   <file alias="stop.png">icons/stop.png</file>
+  <file alias="workunit.png">icons/workunit.png</file>
   <file alias="workunits.png">icons/workunits.png</file>
 </qresource>
 </RCC>
