--- a/BoincGui/resources.qrc
+++ b/BoincGui/resources.qrc
@@ -5,6 +5,8 @@
   <file alias="connect_no.png">icons/connect_no.png</file>
   <file alias="cpu.png">icons/cpu.png</file>
   <file alias="disc_stats.png">icons/disc_stats.png</file>
+  <file alias="filetransfers.png">icons/filetransfers.png</file>
+  <file alias="no_new_tasks.png">icons/no_new_tasks.png</file>
   <file alias="project.png">icons/project.png</file>
   <file alias="projects.png">icons/projects.png</file>
   <file alias="statistics.png">icons/statistics.png</file>
@@ -16,5 +18,6 @@
   <file alias="status_uploaded.png">icons/status_uploaded.png</file>
   <file alias="status_uploading.png">icons/status_uploading.png</file>
   <file alias="workunit.png">icons/workunit.png</file>
+  <file alias="workunit_suspended.png">icons/workunit_suspended.png</file>
 </qresource>
 </RCC>
